# ml_data_processing

./: .gitignore  README.md  cleanup.sh
annotation_format_conv/: README.md
annotation_format_conv/yolo_coco/: README.md  annotations.py  generate_txt_file.py  requirements.txt  yolo_to_coco.py
annotation_format_conv/yolo_data_example/: classes.txt
annotation_format_conv/yolo_pascalvoc/: README.md  display_annots.py  requirements.txt  utils.py  voc_to_yolo.py  yolo_to_voc.py
audio_video_io_utils/: README.md  get_video_length_stats.py  read_skipped_video_test.py  read_video_test.py  requirements.txt  trim_and_concat_video.py
audio_video_io_utils/cpp_multi_thread_opencv_archive/: CMakeLists.txt  README.md
audio_video_io_utils/cpp_multi_thread_opencv_archive/include/common/: CameraStreamer.hpp
audio_video_io_utils/cpp_multi_thread_opencv_archive/src/: CameraStreamer.cpp  MultiCamera.cpp
common_utils/: count_files_num.sh  count_files_recur.sh
common_utils/mask_compression/: Makefile  compress.c  compression_test.py  sample_img_mask.npy
image_io_utils/: README.md  read_image_test.py  requirements.txt
tf_image_augmentation_test/: README.md  custom_augmentations.py  image_augmentation_test.py
training_data_cls_seg_filter/: README.md
training_data_cls_seg_filter/cls_training_data_filtering/: README.md  filter_img.py  save_filtered_img.py
yolo_pascalvoc/: README.md
youtube_downloader/: README.md  download_all_vids.sh  download_from_youtube.py  download_from_youtube_search.py  download_from_youtube_urls.py  download_from_youtube_urls_with_restarts.py
(+41 files in other folders)
